hphp/hack/test/typecheck/union/arrays.php.like_types.exp
File "arrays.php", line 33, characters 3-13:
  varray<nothing>
File "arrays.php", line 34, characters 3-16:
  nothing
File "arrays.php", line 42, characters 3-13:
  varray<int>
File "arrays.php", line 43, characters 3-16:
  int
File "arrays.php", line 51, characters 3-13:
  varray_or_darray<arraykey, _>
File "arrays.php", line 52, characters 3-16:
  _
File "arrays.php", line 60, characters 3-13:
  (varray<int> | varray_or_darray<arraykey, _>)
File "arrays.php", line 61, characters 3-16:
  (_ | int)
File "arrays.php", line 70, characters 3-13:
  ~(varray<int> | varray_or_darray<arraykey, _>)
File "arrays.php", line 71, characters 3-16:
  ~(_ | int)
File "arrays.php", line 75, characters 3-13:
  varray<int>
File "arrays.php", line 76, characters 3-16:
  int
File "arrays.php", line 79, characters 3-13:
  ~varray<int>
File "arrays.php", line 80, characters 3-16:
  ~int
File "arrays.php", line 83, characters 3-13:
  ~varray<int>
File "arrays.php", line 84, characters 3-16:
  ~int
File "arrays.php", line 91, characters 3-13:
  varray<(int | string)>
File "arrays.php", line 92, characters 3-16:
  (int | string)
File "arrays.php", line 99, characters 3-13:
  varray<int>
File "arrays.php", line 100, characters 3-16:
  int
File "arrays.php", line 107, characters 3-13:
  ~varray<int>
File "arrays.php", line 108, characters 3-16:
  ~int
File "arrays.php", line 116, characters 3-13:
  varray<(int | string)>
File "arrays.php", line 117, characters 3-16:
  (int | string)
File "arrays.php", line 128, characters 3-13:
  darray<int, bool>
File "arrays.php", line 129, characters 3-16:
  bool
File "arrays.php", line 136, characters 3-13:
  darray<int, (bool | string)>
File "arrays.php", line 137, characters 3-16:
  (bool | string)
File "arrays.php", line 144, characters 3-13:
  ~darray<int, int>
File "arrays.php", line 145, characters 3-16:
  ~int
File "arrays.php", line 152, characters 3-13:
  ~darray<int, int>
File "arrays.php", line 153, characters 3-16:
  ~int
File "arrays.php", line 160, characters 3-13:
  ~darray<int, (int | string)>
File "arrays.php", line 161, characters 3-16:
  ~(int | string)
File "arrays.php", line 164, characters 3-13:
  darray<int, (bool | string)>
File "arrays.php", line 165, characters 3-16:
  (bool | string)
File "arrays.php", line 168, characters 3-13:
  ~darray<int, bool>
File "arrays.php", line 169, characters 3-16:
  ~bool
File "arrays.php", line 172, characters 3-13:
  darray<int, bool>
File "arrays.php", line 173, characters 3-16:
  bool
File "arrays.php", line 176, characters 3-13:
  ~darray<int, bool>
File "arrays.php", line 177, characters 3-16:
  ~bool
File "arrays.php", line 180, characters 3-13:
  ~darray<int, bool>
File "arrays.php", line 181, characters 3-16:
  ~bool
File "arrays.php", line 14, characters 3-7:
You cannot have an array without generics in strict mode (Typing[4045])
File "arrays.php", line 15, characters 3-7:
You cannot have an array without generics in strict mode (Typing[4045])
File "arrays.php", line 14, characters 3-7:
You cannot have an array without generics in strict mode (Typing[4045])
File "arrays.php", line 15, characters 3-7:
You cannot have an array without generics in strict mode (Typing[4045])
File "arrays.php", line 53, characters 16-17:
Invalid argument (Typing[4110])
File "arrays.php", line 184, characters 26-33:
Expected varray<[unresolved]>
File "arrays.php", line 14, characters 3-7:
But got varray_or_darray<arraykey, _>
File "arrays.php", line 63, characters 20-21:
Invalid argument (Typing[4110])
File "arrays.php", line 185, characters 27-36:
Expected varray<int>
File "arrays.php", line 14, characters 3-7:
But got varray_or_darray<arraykey, _>
File "arrays.php", line 72, characters 20-21:
Invalid argument (Typing[4110])
File "arrays.php", line 185, characters 27-36:
Expected varray<int>
File "arrays.php", line 14, characters 3-7:
But got varray_or_darray<arraykey, _>
File "arrays.php", line 95, characters 20-21:
Invalid argument (Typing[4110])
File "arrays.php", line 185, characters 33-35:
Expected int
File "arrays.php", line 89, characters 17-18:
But got string
File "arrays.php", line 96, characters 23-24:
Invalid argument (Typing[4110])
File "arrays.php", line 186, characters 36-41:
Expected string
File "arrays.php", line 87, characters 17-17:
But got int
File "arrays.php", line 120, characters 20-21:
Invalid argument (Typing[4110])
File "arrays.php", line 185, characters 33-35:
Expected int
File "arrays.php", line 114, characters 17-18:
But got string
File "arrays.php", line 121, characters 23-24:
Invalid argument (Typing[4110])
File "arrays.php", line 186, characters 36-41:
Expected string
File "arrays.php", line 112, characters 17-17:
But got int
File "arrays.php", line 4, characters 16-16:
Wrong type hint (Typing[4338])
File "arrays.php", line 4, characters 9-14:
Expected string
File "arrays.php", line 4, characters 20-20:
But got int
